2013-04-27  Mark Wielaard  <mjw@redhat.com>

	* update1.c (main): Use unique tempfile name and unlink file.
	* update2.c (main): Likewise.
	* update3.c (main): Likewise.
	* update4.c (main): Use unique tempfile name.

2013-04-27  Mark Wielaard  <mjw@redhat.com>

	* run-alldts.sh: Add testfile-alldts to tempfiles.
	* run-elf_cntl_gelf_getshdr.sh: Add test_shdr.out to tempfiles.
	* run-macro-test.sh: Add readelf.macros.out to tempfiles.
	* run-strip-reloc.sh: Add readelf.out, readelf.out1, readelf.out2
	and out.stripped1, out.debug1, out.stripped2, out.debug2 to tempfiles.

2013-04-26  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (installed_TESTS_ENVIRONMENT): Export environment,
	remove wrapper.
	(TESTS_ENVIRONMENT): Likewise.
	(installed_LOG_COMPILER): New variable defining wrapper.
	(LOG_COMPILER): Likewise.
	* run-*.sh: Fixup location of input and output files.
	* test-subr.sh: Create test_dir, pushd to execute test in.
	(trap): Remove test_dir.
	(testfiles): Use abs_srcdir.
	(installed_testrun): Match on abs_builddir or abs_top_builddir.
	(self_test_files): Adjust path.

2013-04-24  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am: Use AM_CPPFLAGS instead of INCLUDES.

2013-03-25  Mark Wielaard  <mjw@redhat.com>

	* run-readelf-aranges.sh: New test.
	* testfilefoobarbaz.bz2: New test file.
	* Makefile.am (TESTS): Add run-readelf-aranges.sh.
	(EXTRA_DIST): Add run-readelf-aranges.sh and testfilefoobarbaz.bz2.

2013-03-25  Mark Wielaard  <mjw@redhat.com>

	* run-readelf-dwz-multi.sh: Expect high_pc also as address.

2013-03-20  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* Makefile.am (check_PROGRAMS): Add dwfl-report-elf-align.
	(TESTS): Add run-dwfl-report-elf-align.sh.
	(EXTRA_DIST): Add run-dwfl-report-elf-align.sh and
	testfile-dwfl-report-elf-align-shlib.so.bz2 .
	(dwfl_report_elf_align_LDADD): New.
	* dwfl-report-elf-align.c: New file.
	* run-dwfl-report-elf-align.sh: New file.
	* testfile-dwfl-report-elf-align-shlib.so.bz2: New file.
